[package]
name = "chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "2.33", features = ["yaml"]}
crossterm = "0.20"
tui = { version = "0.16", default-features = false, features = ['crossterm'] }
itertools = "0.10.1"